myproject_src = files([
'main.cpp' # список исходных файлов
])
executable(
'project', # название исполняемого файла
include_directories: src, # где ищутся заголовочные файлы
sources: myproject_src, # список исходный файлов
dependencies: [], # зависимости проекта (если имеются)
install: true # устанавливать ли файл
)