myproject_src = files([
    'main.cpp' # список исходных файлов
])

executable(
    'myproject', #название исполняемого файла
    sources: myproject_src,
    include_directories: src, # где ищутся заголовочные файлы
    dependencies: [], # завистиости проекта
    install: true # устанавливать ли файлы
)